# Invest-Wise

./: README.md  Schools.xlsx
frontend/: dashboard.html  test.html
invest_wise/: apps.py  models.py  tests.py  views.py
investwise_Backend/: Dockerfile  celery.py  docker-compose.yml  logging_config.py  pyproject.toml  settings.py  urls.py
